Day 20 Build login page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,3 +4,13 @@
 .chatbox {
   height: 450px;
 }
+
+.ui.icon.header.aligned {
+    margin: 40px;
+}
+
+.circular.orange.power.off.icon {
+    font-size: 2em;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
