--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,12 +8,21 @@
   <div class="ui dropdown item">
     Account <i class="dropdown icon"></i>
     <div class="menu">
-      <a class="item">Log out</a>
-      <a><%= link_to "Log in", login_path, class: "item"%></a>
-      <a class="item">Sign up</a>
+      <% if logged_in? %>
+        <a><%= link_to "Logout", logout_path, class: "item", data: {turbo_method: :delete} %></a>
+      <% else %>
+        <a><%= link_to "Log in", login_path, class: "item"%></a>
+        <a class="item">Sign up</a>
+      <% end %>
     </div>
   </div>
-  <div class="item">
-    <div class="ui primary button">Sign Up</div>
-  </div>
+  <% if !logged_in? %>
+    <div class="item">
+      <%= link_to "Log in", login_path, class: "ui primary button"%>
+    </div>
+  <% else %>
+      <div class="item">
+        <%= link_to "Logout", logout_path, class: "negative ui button", data: {turbo_method: :delete} %>
+      </div>
+  <% end %>
 </div>
