--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -16,7 +16,7 @@
           <div class="field">
             <div class="ui fluid icon input">
               <%= f.text_field :body  %>
-              <%= f.button '<i class="bordered inverted orange edit icon"></i>'.html_safe %>
+              <%= f.button '<i class=" orange big paper plane icon"></i>'.html_safe %>
             </div>
           </div>
         <% end %>
