--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -24,19 +24,17 @@
     </div>
   </div>
 
-  <div class="four wide column">
-    <div class="ui fluid raised card chatbox">
-      <div class="content">
-        <div class="ui inverted vertical menu">
-        <a class="active item">
-            Home
-        </a>
-        <a class="item">
-            Messages
-        </a>
-        <a class="item">
-            Friends
-        </a>
+  <div class="four wide column ">
+    <div class="ui fluid raised card chatbox  ">
+      <div class="content ">
+        <div class="ui inverted vertical menu "> 
+        <div class="ui inverted center aligned segment">
+          <i class="big users icon"></i>
+          Users
+        </div>
+        <% @users.each do |u| %>
+        <a class="item"><%= u.username  %></a>
+        <% end %>
         </div>
       </div>
     </div>
