Day 22 minor Updates

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -19,3 +19,12 @@
   overflow: auto;
   height: 15em;
 }
+
+#user.active.item{
+  color: rgb(233, 241, 241) !important;
+  text-align: center;
+}
+
+.ui.vertical.menu {
+  width: auto;
+}
