--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -15,7 +15,7 @@
         <%= form_for(@message, html: { class: "ui reply form", role: "form" }, url: message_path, remote: true) do |f| %>
           <div class="field">
             <div class="ui fluid icon input">
-              <%= f.text_field :body  %>
+              <%= f.text_field :body, placeholder: "Enter your message here....." %>
               <%= f.button '<i class=" orange big paper plane icon"></i>'.html_safe %>
             </div>
           </div>
