--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,6 +5,11 @@
   Messages
 </a>
 <div class="right menu">
+    <% if logged_in? %>
+      <a class="item">
+        <%= current_user.username%>
+      </a>
+    <% end %>
   <div class="ui dropdown item">
     Account <i class="dropdown icon"></i>
     <div class="menu">
