--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,3 +28,15 @@
 .ui.vertical.menu {
   width: auto;
 }
+
+.footer {
+  background-color: #212121;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 15px 0;
+  text-align: center;
+  color: white;
+  font-size: 18px;
+}
